# day-pilot

./: .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
backlog/: config.yml
backlog/tasks/: task-001 - Integrate-Whoop-data.md  task-002 - Integrate-weather-data.md  task-003 - User-location-normalization-via-OpenCage-init-command.md  task-004 - WHOOP-OAuth-integration-for-CLI-local-callback-flow.md
scripts/: print_weather_prompt.py  print_whoop_prompt.py
src/daypilot/: cli.py  settings.py  start.py  state.py
src/daypilot/capture/: __init__.py  agent.py  schema.py  state.py  tools.py
src/daypilot/services/: __init__.py  config.py  location_normalization.py  weather.py  whoop_data.py  whoop_oauth.py
src/daypilot/start_nodes/: __init__.py  analyze_priorities_node.py  create_schedule_node.py  fetch_weather_node.py  fetch_whoop_node.py  gather_input_node.py  present_plan_node.py
src/daypilot/tui/: __init__.py  __main__.py  app.py  capture_screen.py
