[project]
name = "daypilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.8",
    "typer>=0.20.0",
]

[project.scripts]
cli = "daypilot.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, flakes, imports

[tool.ruff.format]
quote-style = "double"
